# todolist-mcp

./: .gitignore  CLAUDE.md  Makefile  README.md  kanban_web.py  makefile_mcp.py  pyproject.toml  styles.css  todo_mcp.py
.cursor/rules/: todo-list-mcp-overview.mdc
.github/workflows/: ci.yml
tests/: test_dependencies.py  test_description_validation.py  test_kanban_web_comprehensive.py  test_kanban_web_escaping.py  test_makefile_mcp.py  test_pagination_and_get_by_id.py  test_pr_workflow.py  test_timestamps.py  test_update_item.py
